--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.heading{
+  color: rgb(202, 42, 175);
+  font-family:Georgia, 'Times New Roman', Times, serif ;
+  font-size: 40px;
+}
+
 .row {
   display: flex;
   justify-content: center;
@@ -9,7 +15,7 @@
 }
 
 .box{
-  border: 2px solid rgb(102, 227, 177);
+  border: 2px solid rgb(236, 102, 193);
   width: 110px;
   height: 100px;
   background-color: white;
@@ -23,15 +29,16 @@
 .box:hover{
   cursor: pointer;
   transition: 1s;
-  box-shadow: 0 0 10px 4px rgb(143, 253, 209);
-  border: 2px solid  rgb(69, 192, 143) ;
+  box-shadow: 0 0 10px 4px rgb(238, 175, 245);
+  /* border: 2px solid  rgb(69, 192, 143) ; */
   z-index: 100;
 }
 
 .board {
   display: block;
   margin: 30px auto;
-  background-color: rgb(102, 227, 177);
+  background-color: rgb(230, 114, 243);
+  
 width: fit-content;
 padding: 15px;
 }
@@ -44,7 +51,9 @@ padding: 15px;
 .winner-text{
   display: block;
  margin: 40px auto;
-  background-color: rgb(72, 238, 182);
+  /* background-color:  rgb(234, 70, 207); */
+  background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+  
   width: fit-content;
   padding: 5px 50px;
   border-radius: 5px;
@@ -56,8 +65,8 @@ padding: 15px;
   font-weight: bold;
   margin: 30px auto;
   width: 220px;
-  border: none;
+  border: 2px solid  rgb(230, 114, 243) ;
   border-radius: 5px;
   font-size: 17px;
-  background-color:  rgb(34, 225, 149);
+background-color: #53f69a;
 }
